# RefugiosMascotas

./: .env.example  .gitignore  Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json
Backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt
Backend/app/: cloudinary_client.py  config.py  database.py  deps.py  main.py  oauth.py  security.py  upload_utils.py
Backend/app/models/: __init__.py  admin.py  adopter.py  adoption_request.py  foundation.py  pet.py
Backend/app/routers/: admin.py  adopters.py  adoptions.py  auth.py  foundations.py  pets.py
Backend/app/schemas/: admin.py  adopter.py  adoption_request.py  auth.py  foundation.py  pet.py
Backend/ini/: env.py
Backend/ini/versions/: 1762d783395f_.py  386e7ce18841_.py  56549e03e3eb_.py  68d7bc9c7887_.py  88e0e8ba9ce8_.py  c9a8b7d6e5f4_.py  d3e4f5a6b7c8_.py
RefugiosMascotas/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vercel.json
RefugiosMascotas/src/: App.css  App.tsx  index.css  main.tsx
RefugiosMascotas/src/api/: admin.ts  adopters.ts  adoptions.ts  auth.ts  client.ts  foundations.ts  mappers.ts  pets.ts
RefugiosMascotas/src/context/: AuthContext.tsx
RefugiosMascotas/src/data/: pets.ts  refugios.ts
RefugiosMascotas/src/hooks/: useReveal.ts
RefugiosMascotas/src/pages/: AdminPage.css  AdminPage.tsx  ApplicantDrawer.css  ApplicantDrawer.tsx  AuthCallbackPage.tsx  ContactoPage.tsx  CookiesPage.tsx  FoundationDetailPage.css  (+9 more)
(+47 files in other folders)
