[project]
name = "backend"
version = "0.1.0"
description = "API asíncrona para RefugiosMascotas (FastAPI + SQLAlchemy 2 async)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.3",
    "authlib>=1.3.1",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.9",
    "cloudinary>=1.40.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]
